# rusty-crabs

./: .gitignore
base/: Cargo.toml
base/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
collections/: Cargo.toml
collections/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs  traits.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
io_toy/: Cargo.toml  output.txt
io_toy/src/: lib.rs  main.rs
iterators/: Cargo.toml
iterators/src/: lib.rs  main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
smart-pointer/: Cargo.toml
smart-pointer/box-t/: Cargo.toml
smart-pointer/box-t/src/: lib.rs
smart-pointer/deref-ex/: Cargo.toml
smart-pointer/deref-ex/src/: lib.rs
structure/: Cargo.toml
structure/src/: main.rs
tests/: Cargo.toml
tests/src/: lib.rs
workspaces/: Cargo.toml
workspaces/add-lib/: Cargo.toml
workspaces/adder/: Cargo.toml
workspaces/adder/src/: main.rs
